--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "axios": "^0.19.2",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^16.12.0",
-    "react-compound-slider": "^2.5.0",
+    "react-compound-slider": "^0.16.3",
     "react-dom": "^16.12.0",
     "react-rangeslider": "^2.2.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
+    "reactrangeslider": "^3.0.6",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
   },
